# eXCalc

./: .gitmodules  CMakeLists.txt  INSTALL.md  do_list.md  vcpkg.json  vcpkg_install.md
eXCalc/: CMakeLists.txt  CSERIALPORT_SOURCE_FILES
eXCalc/src/: eXCalc.cpp  eXCalc.h
eXPlot/: CMakeLists.txt
eXPlot/src/: eXPlot.cpp  eXPlot.h
eXPlot/src/Connectivity/: SerialInterface.cpp  SerialInterface.h  SerialPort.cpp  SerialPort.h  UsartInterface.cpp  UsartInterface.h  ring_buffer.c  ring_buffer.h
eXPlot/src/SystemLib/: SystemExtra.cpp  SystemExtra.h
eXPlot/src/TransportLayer/: CRCHub.cpp  CRCHub.h  ConnectInterface.cpp  ConnectInterface.h  Message.cpp  Message.h  TxInvoker.cpp  TxInvoker.h  UartConnect.cpp  UartConnect.h  VisionSensorConnect.cpp  VisionSensorConnect.h  VisionSensorMsgs.cpp  VisionSensorMsgs.h  eXPlotConnect.cpp  eXPlotConnect.h  eXPlotMsgs.cpp  eXPlotMsgs.h
eXPlot/src/common/: App.cpp
